tests/files/lexer_tests/should_fail/012.cmdr
// Illegal character in string (ascii 12)
var = '';